--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"images/animation.json":["images/animation.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"images/animation.json":["images/animation.json"],"images/google_play_download.png":["images/google_play_download.png"],"images/logo.png":["images/logo.png"],"images/mobile2.png":["images/mobile2.png"],"images/mockuper.png":["images/mockuper.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
