--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "argendi_website",
-    "short_name": "argendi_website",
+    "name": "ArGendi",
+    "short_name": "ArGendi",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
